Replace some Strings in Custom Tooltips with TooltipFactories
This makes the whole system more dynamic at little performance cost.